force-app/main/default/objects/Hospitality2__c/Hospitality2__c.object-meta.xml
<CustomObject>
    <label>Hospitality2</label>
    <nameField>
        <label>Hospitality2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitalities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>