force-app/main/default/objects/Hospitality2__c/fields/Total_Hotel_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Hotel_Bookings__c</fullName>
    <label>Total Hotel Bookings</label>
    <summaryForeignKey>Guest_Reservation2__c.Hospitality__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>