force-app/main/default/objects/Hospitality2__c/fields/Total_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Total_Reservations__c</fullName>
    <label>Total Reservations</label>
    <summaryFilterItems>
        <field>Guest_Reservation2__c.Restaurant_Hotel__c</field>
        <operation>equals</operation>
        <value>Restaurant</value>
    </summaryFilterItems>
    <summaryForeignKey>Guest_Reservation2__c.Hospitality__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>